--- a/bootstrap-navbar.html
+++ b/bootstrap-navbar.html
@@ -6,14 +6,29 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
    </head>
 <body>
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
+ <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <!-----------------------------------------------starting button---------------------->
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <!---------------------------ending button -------------------------->
         <div class="navbar-header">
-            <a class="navbar-brand">Nanosoft</a>
+            <a class="navbar-brand " href="#"><span class="glyphicon glyphicon-globe"></span>Nanosoft</a>
         </div>
         <ul class="nav navbar-nav">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Courses</a></li>
+            <li class="dropdown">
+            <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span class="caret"></span>Courses</a>
+            <ul class="dropdown-menu">
+                <li><a href="#">JavaScript</a></li>
+                <li><a href="#">Bootstrap</a></li>
+                <li><a href="#">HTML</a></li>
+            </ul>
+            </li>
             <li><a href="#">Contacts</a></li>
         </ul>
 
