--- a/bootstrap-navbar.html
+++ b/bootstrap-navbar.html
@@ -8,7 +8,7 @@
 <body>
  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-        <!-----------------------------------------------starting button---------------------->
+        <!-----------------------------------------------starting button----------------------->
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -19,19 +19,25 @@
         <div class="navbar-header">
             <a class="navbar-brand " href="#"><span class="glyphicon glyphicon-globe"></span>Nanosoft</a>
         </div>
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav ">
             <li><a href="#">Home</a></li>
             <li class="dropdown">
-            <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span class="caret"></span>Courses</a>
+            <a href="#" data-toggle="dropdown" class="dropdown-toggle">Courses  <span class="caret"></span></a>
             <ul class="dropdown-menu">
-                <li><a href="#">JavaScript</a></li>
-                <li><a href="#">Bootstrap</a></li>
-                <li><a href="#">HTML</a></li>
+                <li><a href="#">Javascript</a></li>
+                <li><a href="#">CSS</a></li>
             </ul>
             </li>
             <li><a href="#">Contacts</a></li>
         </ul>
-
+        <!-- search-->
+        <form class="navbar-form navbar-right" role="search">
+            <div class="form-group">
+                <input type="text" class="form-control">
+            </div>
+            <button type="button" class="btn btn-default">Search<span class="glyphicon glyphicon-search"></span></button>
+            
+        </form>
     </div>
 </nav>
  
