--- a/bootstrap-navbar.html
+++ b/bootstrap-navbar.html
@@ -21,22 +21,25 @@
         </div>
         <ul class="nav navbar-nav ">
             <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Product</a></li>
             <li class="dropdown">
-            <a href="#" data-toggle="dropdown" class="dropdown-toggle">Courses  <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-                <li><a href="#">Javascript</a></li>
-                <li><a href="#">CSS</a></li>
-            </ul>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Services  <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Javascript</a></li>
+                    <li><a href="#">CSS</a></li>
+                </ul>
             </li>
-            <li><a href="#">Contacts</a></li>
+            
         </ul>
         <!-- search-->
         <form class="navbar-form navbar-right" role="search">
             <div class="form-group">
                 <input type="text" class="form-control">
             </div>
-            <button type="button" class="btn btn-default">Search<span class="glyphicon glyphicon-search"></span></button>
-            
+            <button type="button" class="btn btn-default">Search
+                <span class="glyphicon glyphicon-search"></span></button>
+
         </form>
     </div>
 </nav>
