--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -3,41 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
- 
-<link rel="stylesheet" href="./css/bootstrap.min.css">
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <style>
-        .jumbotron
-        {
-            background-color: dodgerblue;
-            font-family: monospace;
-        }
-        /* starting styling grid system*/
-        .row
-        {
-            background-color: cadetblue;
-        }/*Ending styling*/
-    </style>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 <body>
-    <div class="jumbotron">
-        <h1 class="text-center">Bootstrap Grid System</h1>
-    </div>
-    <div class="row">
-        <div class="col-md-1" >Mughees</div>
-        <div class="col-md-1" >Ahemd</div>
-        <div class="col-md-1" >Siddiqui</div>
-        <div class="col-md-1" >Mughees</div>
-        <div class="col-md-1" >Ahemd</div>
-        <div class="col-md-1" >Siddiqui</div>
-        <div class="col-md-1" >Mughees</div>
-        <div class="col-md-1" >Ahemd</div>
-        <div class="col-md-1" >Siddiqui</div>
-        <div class="col-md-1" >Mughees</div>
-        <div class="col-md-1" >Ahemd</div>
-        <div class="col-md-1" >Siddiqui</div>
-        
-    </div>
+    <nav class="navbar navbar-inverse">
+        <div class="container">
+            <div class="navbar-header">
+                <a href="#" class="navbar-brand"><span class="glyphicon glyphicon-globe"></span>NanoSoft</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li><a>Home</a></li>
+                <li class="dropdown">
+                    <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span class="caret"></span>Courses</a>
+                    <ul class="dropdown-menu">
+                        <li>Javascript</li>
+                        <li>HTML</li>
+                    </ul>
+                </li>
+                <li><a>Contacts</a></li>
+            </ul>
+            <form class="navbar-form navbar-right">
+                <div class="form-group">
+                    <input type="text" class="form-control">
+                </div>
+             <button type="button" class="btn btn-default ">Search <span class="glyphicon glyphicon-search"></span></button>    
+            </form>
+           
+        </div>
+    </nav>
 </body>
+
 </html>
