--- a/bootstrap-navbar.html
+++ b/bootstrap-navbar.html
@@ -15,7 +15,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <!---------------------------ending button -------------------------->
+                       <!---------------------------ending button -------------------------->
         <div class="navbar-header">
             <a class="navbar-brand " href="#"><span class="glyphicon glyphicon-globe"></span>Nanosoft</a>
         </div>
@@ -43,6 +43,10 @@
         </form>
     </div>
 </nav>
+
+<div>
+    
+</div>
  
 </body>
 </html>
