--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -32,17 +32,18 @@
         </div>
     </nav>
     <div class="container-fluid">
-    <!-- left coloumn--->
-    <div class="col-sm-3">
-       <!------List gruop panel------->
-        <div class="panel panel-default">
-           <div class="panel-heading">
-               <h1 class="panel-title"><span class="glyphicon glyphicon-random"></span>Completely synergize</h1>
-           </div>
+        <div class="col-sm-3">
+            <div class="panel panel-default">
+                <div class="panel-heding">
+                    <h1 class="panel-title"><span class="glyphicon glyphicon-random"> </span>Completely synergize</h1>
+
+                </div>
+
+            </div>
+
         </div>
 
     </div>
-</div>
 </body>
 
 </html>
