panel complete ho gayua

--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -31,18 +31,21 @@
            
         </div>
     </nav>
-    <div class="container-fluid">
+    <div class="container">
         <div class="col-sm-3">
             <div class="panel panel-default">
-                <div class="panel-heding">
-                    <h1 class="panel-title"><span class="glyphicon glyphicon-random"> </span>Completely synergize</h1>
-
+                <div class="panel-heading">
+                    <h1 class="panel-title" ><span class="glyphicon glyphicon-random"></span>Completely synergize</h1>
                 </div>
-
+                <div class="list-group">
+                     <a href="#" class="list-group-item">Resource Taxing</a>
+                     <a href="#" class="list-group-item">Premier Niche Market</a>
+                     <a href="#" class="list-group-item">Dynamically Innovate</a>
+                     <a href="#" class="list-group-item">Objectively Innovate</a>
+                     <a href="#" class="list-group-item">Proactively Envisioned</a>
+                </div>
             </div>
-
         </div>
-
     </div>
 </body>
 
