--- a/bootstrap-navbar.html
+++ b/bootstrap-navbar.html
@@ -43,10 +43,18 @@
         </form>
     </div>
 </nav>
+<div class="container-fluid">
+    <div class="col-sm-3">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+               <h1 class="panel-title"><span class="glyphicon glyphicon-random"></span>Completely Synergize</h1>
+            </div>
 
-<div>
-    
+        </div>
+    </div>
+
 </div>
- 
+
+
 </body>
 </html>
