--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -46,6 +46,13 @@
                      <a href="#" class="list-group-item">Proactively Envisioned</a>
                 </div>
             </div>
+
+            <div class="panel panel-primary">
+                <div class="panel-header">
+                     <h1 class="panel-title"><span class="glyphicon glyphicon-cog"></span>Dramatically Engage</h1>
+                </div>
+
+            </div>
             
         </div>
     </div>
