--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -33,8 +33,8 @@
     </nav>
     <div class="container">
         <div class="col-sm-3">
-
-            <div class="panel panel-default">
+<!-----------------------------------fIRST PANEL START----------------------------------------->
+            <div class="panel panel-primary">
                 <div class="panel-heading">
                     <h1 class="panel-title" ><span class="glyphicon glyphicon-random"></span>Completely synergize</h1>
                 </div>
@@ -46,14 +46,33 @@
                      <a href="#" class="list-group-item">Proactively Envisioned</a>
                 </div>
             </div>
-
+            <!------------------------------FIRST PANEL END---------------------------------->
+<!------------------------------------second paner start----------------------------------->
             <div class="panel panel-primary">
-                <div class="panel-header">
+                <div class="panel-heading">
                      <h1 class="panel-title"><span class="glyphicon glyphicon-cog"></span>Dramatically Engage</h1>
                 </div>
-
+                   <div class="panel-body">
+                      <p>Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains. Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.</p>
+                      <button class="btn btn-primary">Engage</button>
+                   </div>
             </div>
-            
+            <!--------------------------------second panel end------------------------------>
+            <!--------------------------------Third panel start----------------------->
+            <div class="panel panel-primary">
+              <div class="panel-heading">
+                  <h1 class="panel-title"><span class="glyphicon glyphicon-bullhorn"></span>Active Predomination</h1>
+                  </div>
+                  <div class="panel-body">
+                         <p>Proactively envisioned multimedia based expertise and cross-media growth strategies.</p>
+                         <div class="btn-group" role="group">
+                         <button class="btn btn-default">Resource</button>
+                         <button class="btn btn-default">Envision </button>
+                         <button class="btn btn-default">Niche </button>
+                         </div>
+                  </div>
+            </div>
+            <!----------------------------------Third panel end------------------------->
         </div>
     </div>
 </body>
