--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -6,75 +6,77 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-inverse">
-        <div class="container">
-            <div class="navbar-header">
-                <a href="#" class="navbar-brand"><span class="glyphicon glyphicon-globe"></span>NanoSoft</a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li><a>Home</a></li>
-                <li class="dropdown">
-                    <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span class="caret"></span>Courses</a>
-                    <ul class="dropdown-menu">
-                        <li>Javascript</li>
-                        <li>HTML</li>
-                    </ul>
-                </li>
-                <li><a>Contacts</a></li>
-            </ul>
-            <form class="navbar-form navbar-right">
-                <div class="form-group">
-                    <input type="text" class="form-control">
-                </div>
-             <button type="button" class="btn btn-default ">Search <span class="glyphicon glyphicon-search"></span></button>    
-            </form>
-           
-        </div>
-    </nav>
+  <nav class="navbar navbar-inverse">
     <div class="container">
-        <div class="col-sm-3">
-<!-----------------------------------fIRST PANEL START----------------------------------------->
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h1 class="panel-title" ><span class="glyphicon glyphicon-random"></span>Completely synergize</h1>
-                </div>
-                <div class="list-group">
-                     <a href="#" class="list-group-item">Resource Taxing</a>
-                     <a href="#" class="list-group-item">Premier Niche Market</a>
-                     <a href="#" class="list-group-item">Dynamically Innovate</a>
-                     <a href="#" class="list-group-item">Objectively Innovate</a>
-                     <a href="#" class="list-group-item">Proactively Envisioned</a>
-                </div>
-            </div>
-            <!------------------------------FIRST PANEL END---------------------------------->
-<!------------------------------------second paner start----------------------------------->
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                     <h1 class="panel-title"><span class="glyphicon glyphicon-cog"></span>Dramatically Engage</h1>
-                </div>
-                   <div class="panel-body">
-                      <p>Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains. Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.</p>
-                      <button class="btn btn-primary">Engage</button>
-                   </div>
-            </div>
-            <!--------------------------------second panel end------------------------------>
-            <!--------------------------------Third panel start----------------------->
-            <div class="panel panel-primary">
-              <div class="panel-heading">
-                  <h1 class="panel-title"><span class="glyphicon glyphicon-bullhorn"></span>Active Predomination</h1>
-                  </div>
-                  <div class="panel-body">
-                         <p>Proactively envisioned multimedia based expertise and cross-media growth strategies.</p>
-                         <div class="btn-group" role="group">
-                         <button class="btn btn-default">Resource</button>
-                         <button class="btn btn-default">Envision </button>
-                         <button class="btn btn-default">Niche </button>
-                         </div>
-                  </div>
-            </div>
-            <!----------------------------------Third panel end------------------------->
+        <div class="navbar-header">
+            <a href="#" class="navbar-brand"><span class="glyphicon glyphicon-globe"></span>Nanosoft</a>
         </div>
+        <ul class="nav navbar-nav">
+            <li><a>Home</a></li>
+            <li class="dropdown">
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span class="caret"></span>Courses</a>
+                <ul class="dropdown-menu">
+                    <li>Javascript</li>
+                    <li>HTML</li>
+                </ul>
+            </li>
+            <li><a>Contacts</a></li>
+        </ul>
+        <form class="navbar-form navbar-right">
+            <div class="form-group">
+                <input type="text" class="form-control">
+            </div>
+            <button type="button" class="btn btn-default ">Search <span class="glyphicon glyphicon-search"></span></button>
+        </form>
+
     </div>
+</nav>
+<div class="container">
+    <div class="col-sm-3">
+        <!-----------------------------------fIRST PANEL START----------------------------------------->
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h1 class="panel-title"><span class="glyphicon glyphicon-random"></span>Completely synergize</h1>
+            </div>
+            <div class="list-group">
+                <a href="#" class="list-group-item">Resource Taxing</a>
+                <a href="#" class="list-group-item">Premier Niche Market</a>
+                <a href="#" class="list-group-item">Dynamically Innovate</a>
+                <a href="#" class="list-group-item">Objectively Innovate</a>
+                <a href="#" class="list-group-item">Proactively Envisioned</a>
+            </div>
+        </div>
+        <!------------------------------FIRST PANEL END---------------------------------->
+        <!------------------------------------second paner start----------------------------------->
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h1 class="panel-title"><span class="glyphicon glyphicon-cog"></span>Dramatically Engage</h1>
+            </div>
+            <div class="panel-body">
+                <p>Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly predominate extensible
+                    testing procedures for reliable supply chains. Dramatically engage top-line web services vis-a-vis cutting-edge
+                    deliverables.</p>
+                <button class="btn btn-primary">Engage</button>
+            </div>
+        </div>
+        <!--------------------------------second panel end------------------------------>
+        <!--------------------------------Third panel start----------------------->
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h1 class="panel-title"><span class="glyphicon glyphicon-bullhorn"></span>Active Predomination</h1>
+            </div>
+            <div class="panel-body">
+                <p>Proactively envisioned multimedia based expertise and cross-media growth strategies.</p>
+                <div class="btn-group" role="group">
+                    <button class="btn btn-default">Resource</button>
+                    <button class="btn btn-default">Envision </button>
+                    <button class="btn btn-default">Niche </button>
+                </div>
+            </div>
+        </div>
+        <!----------------------------------Third panel end------------------------->
+    </div>
+</div>
 </body>
 
 </html>
