--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -9,12 +9,14 @@
   <nav class="navbar navbar-inverse">
     <div class="container">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand"><span class="glyphicon glyphicon-globe"></span>Nanosoft</a>
+            <a href="#" class="navbar-brand"><span class="glyphicon glyphicon-globe"></span> Nanosoft</a>
         </div>
         <ul class="nav navbar-nav">
             <li><a>Home</a></li>
+            <li><a>About</a></li>
+            <li><a>Product</a></li>
             <li class="dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span class="caret"></span>Courses</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span class="caret"></span> Service</a>
                 <ul class="dropdown-menu">
                     <li>Javascript</li>
                     <li>HTML</li>
@@ -134,10 +136,22 @@
 
 </div>
 <!-------------------------------------center coloumn end--------------------------------------->
+ <!---------------------------------------form---------------------------------------------->
  <div class="col-sm-3">
-   <div class="panel panel-default">
+   <div class="panel panel-primary">
        <div class="panel-heading">
                <a href="#" class="panel-title"> <span class="glyphicon glyphicon-log-in"></span> Log In</a>
+       </div>
+       <div class="panel-body">
+           <form >
+               <div class="form-group">
+                   <input type="text" class="form-control" placeholder="Username" required>
+               </div>
+               <div class="form-group">
+                   <input type="password" class="form-control" placeholder="password" required>
+               </div>
+               <button type="button" class="btn btn-primary">Log In</button>
+           </form>
        </div>
    </div>
  </div>
