--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -32,9 +32,9 @@
         </form>
 
     </div>
-</nav>
-<div class="container">
-    <div class="col-sm-3">
+</nav><!--navigation bar  end-->
+<div class="container"><!---->
+    <div class="col-sm-3"><!--Left coloumn start-->
         <!-----------------------------------fIRST PANEL START----------------------------------------->
         <div class="panel panel-primary">
             <div class="panel-heading">
@@ -77,10 +77,10 @@
             </div>
         </div>
         <!----------------------------------Third panel end------------------------->
-    </div>
+    </div><!--Left coloumn end-->
     <!----------------              col-sm-3 end                    ------------>
     <!----------------------------------Center coloumn start----------------------------------->
-  <div class="col-sm-6">
+  <div class="col-sm-6"><!--Middle coloumn start-->
     <div class="alert alert-success alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <strong>Synergize:</strong> Seamlessly visualize quality intellectual capital!
@@ -134,30 +134,60 @@
 
 
 
-</div>
+</div><!--Middle coloumn end-->
 <!-------------------------------------center coloumn end--------------------------------------->
  <!---------------------------------------form---------------------------------------------->
- <div class="col-sm-3">
-   <div class="panel panel-primary">
-       <div class="panel-heading">
-               <a href="#" class="panel-title"> <span class="glyphicon glyphicon-log-in"></span> Log In</a>
-       </div>
-       <div class="panel-body">
-           <form >
-               <div class="form-group">
-                   <input type="text" class="form-control" placeholder="Username" required>
-               </div>
-               <div class="form-group">
-                   <input type="password" class="form-control" placeholder="password" required>
-               </div>
-               <button type="button" class="btn btn-primary">Log In</button>
-           </form>
-       </div>
-   </div>
- </div>
-
-
-</div>
+ <div class="col-sm-3"><!--RIght COloumn-->
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <a href="#" class="panel-title"> <span class="glyphicon glyphicon-log-in"></span> Log In</a>
+        </div>
+        <div class="panel-body">
+            <form>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Username" required>
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" placeholder="password" required>
+                </div>
+                <button type="button" class="btn btn-primary">Log In</button>
+            </form>
+        </div>
+    </div>
+    <!--                                           form end                -->
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h1 class="panel-title"><span class="glyphicon glyphicon-scale"></span> Dramatically Engage</h1>
+        </div>
+        <div class="panel-body">
+            <div class="progress">
+                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
+                    style="width:100%">
+                    100% Proactively Envisioned
+                </div>
+            </div>
+            <div class="progress">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                    80% objectively innovated
+                </div>
+            </div>
+            <div class="progress">
+                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                    style="width:40%">
+                    40% innovated
+                </div>
+            </div>
+            <div class="progress">
+                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"
+                    style="width:20%">
+                    20% Danger
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--------------------------------------------Progrss bar end-------------------------------------------->
+</div><!--RIght coloumn end--->
+</div><!--container end-->
 </body>
 
 </html>
