--- a/bootstrap-navbar.html
+++ b/bootstrap-navbar.html
@@ -4,46 +4,21 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <style>
-        body{
-            font-family: Verdana, Geneva, Tahoma, sans-serif
-        }
-    .container-fluid{
-      padding: 10px;    
-      font-size: 20px;
-    }
-    </style> 
-</head>
+   </head>
 <body>
-   <!-- <nav class="navbar navbar-default">
+  <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="nabar-brand" href="#">Nanosoft</a>
-       
-
-    </div>
-    <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Page 1</a></li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
-    </ul>
-    </div>
-
-</nav>
-    -->
-    <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">Nanosoft</a>
+            <a class="navbar-brand">Nanosoft</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#">Courses</a></li>
-            <li><a href="#">Books</a></li>
+            <li><a href="#">Contacts</a></li>
         </ul>
 
     </div>
 </nav>
+ 
 </body>
 </html>
