--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -76,6 +76,73 @@
         </div>
         <!----------------------------------Third panel end------------------------->
     </div>
+    <!----------------              col-sm-3 end                    ------------>
+    <!----------------------------------Center coloumn start----------------------------------->
+  <div class="col-sm-6">
+    <div class="alert alert-success alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <strong>Synergize:</strong> Seamlessly visualize quality intellectual capital!
+    </div>
+
+    <div class="row">
+        <article class="col-sm-12">
+            <h1>Premier Niche Markets</h1>
+            <p>Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive
+                e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through
+                sustainable potentialities.</p>
+            <p><button type="button" class="btn btn-default">Readmore</button></p>
+            <p class="pull-right"><span class="label label-default">Keyword</span> <span class="label label-default">Tag</span> <span class="label label-default">Post</span></p>
+            <ul class="list-inline">
+                <li><a>Today</a></li>
+                <li> <a href="#"><span class="glyphicon glyphicon-comment"></span> 9 Comments</a> </li>
+                <li><a href="#"><span class="glyphicon glyphicon-share"></span> 2 Shares </a></li>
+            </ul>
+        </article>
+    </div>
+    <hr>
+
+    <div class="row">
+           <article class="col-sm-12">
+               <h1>Proactively Envisioned</h1>
+               <p>Seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing. Holistically pontificate installed base portals after maintainable products. Proactively envisioned multimedia based expertise and cross-media growth strategies.</p>
+               <p><button class="btn btn-default">Read More</button></p>
+               <p class="pull-right"><span class="label label-default">Keyword</span> <span class="label label-default">Tag</span> <span class="label label-default">post</span></p>
+               <ul class="list-inline">
+                   <li><a href="#">Today</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-comment"></span> 8 Comments</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-share"></span> 9 Shares</a></li>
+               </ul>
+           </article>
+    </div>
+    <hr>
+
+    <div class="row">
+           <article class="col-sm-12">
+               <h1>Completely Synergized</h1>
+               <p>Seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing. Holistically pontificate installed base portals after maintainable products. Proactively envisioned multimedia based expertise and cross-media growth strategies.</p>
+               <p><button class="btn btn-default">Read More</button></p>
+               <p class="pull-right"><span class="label label-default">Keyword</span> <span class="label label-default">Tag</span> <span class="label label-default">post</span></p>
+               <ul class="list-inline">
+                   <li><a href="#">Today</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-comment"></span> 8 Comments</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-share"></span> 9 Shares</a></li>
+               </ul>
+           </article>
+    </div>
+
+
+
+</div>
+<!-------------------------------------center coloumn end--------------------------------------->
+ <div class="col-sm-3">
+   <div class="panel panel-default">
+       <div class="panel-heading">
+               <a href="#" class="panel-title"> <span class="glyphicon glyphicon-log-in"></span> Log In</a>
+       </div>
+   </div>
+ </div>
+
+
 </div>
 </body>
 
